# AugmentorAI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  audio_assistant.py  check_db.py  compose.prod.yml  compose.yml  package-lock.json  package.json  pyproject.toml  test_rag_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  (+1 more)
.mddocs/: README.md
deploy/: .env.production  augmentorai.service  deploy.sh  nginx.conf  nginx.http-only.conf
desktop/: package.json
scripts/: setup.bat  setup.sh
server/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py  server_backend.spec  start.sh
server/app/: __init__.py  main.py
server/app/api/: analytics.py  documents.py  hermes.py  sessions.py  settings.py  websocket.py
server/app/models/: __init__.py  database.py
server/app/services/: app_settings.py  coding_engine.py  confidence_scorer.py  conversation.py  follow_up.py  hermes_client.py  llm.py  prewarm_embeddings.py  rag.py  seed_demo_data.py  session_ai.py  session_context.py  transcription.py
server/data/: augmentor.db
server/data/chroma/: chroma.sqlite3
server/data/chroma/prewarm/: chroma.sqlite3
server/data/uploads/: test_kai_doc.txt
server/tests/: test_confidence_scorer.py  test_conversation.py  test_full_flow.py  test_retry.py
server/tests/server/data/uploads/: test_embedding.txt
shared/: package.json
tmp/: migrate_db.py  transcription.py
web/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
(+23 files in other folders)
