[project]
name = "augmentorai-server"
version = "0.1.0"
description = "FastAPI backend for AugmentorAI"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.6.0",
    "python-multipart==0.0.6",
    "websockets==12.0",
    "aiofiles==23.2.1",
    "httpx==0.26.0",
    "chromadb==0.4.22",
    "numpy==1.26.4",
    "faster-whisper==1.2.1",
    "pypdf==4.3.1",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false
